--- a/Good DBMgr/config.json
+++ b/Good DBMgr/config.json
@@ -10,22 +10,22 @@
     "vdb_creator": {
         "width": 600,
         "height": 549,
-        "x": 1117,
-        "y": 53,
+        "x": 307,
+        "y": 101,
         "crawling": {
             "region": "강남역",
-            "keyword": "소고기전골 내돈내산",
+            "keyword": "칼국수 내돈내산",
             "mode": "데이터 수집 모드(100)",
             "recent_regions": [
                 "강남역",
                 "서초동"
             ],
             "recent_keywords": [
+                "칼국수 내돈내산",
+                "사시미 내돈내산",
                 "소고기전골 내돈내산",
                 "성게비빔밥 내돈내산",
-                "생선구이 내돈내산",
-                "삼계탕 내돈내산",
-                "횟집 내돈내산"
+                "생선구이 내돈내산"
             ]
         },
         "preprocessing": {
@@ -48,10 +48,10 @@
         "y": 73
     },
     "vdb_merge": {
-        "width": 777,
-        "height": 401,
-        "x": 1088,
-        "y": 164
+        "width": 783,
+        "height": 543,
+        "x": 805,
+        "y": 139
     },
     "api_key": {
         "width": 500,
@@ -71,8 +71,8 @@
     },
     "application": {
         "width": 803,
-        "height": 613,
-        "x": 493,
-        "y": 73
+        "height": 290,
+        "x": 914,
+        "y": 133
     }
 }
